--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -1,41 +1,54 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:LunaDraw.Pages"
+             xmlns:views="clr-namespace:LunaDraw.Views"
+             xmlns:components="clr-namespace:LunaDraw.Components"
              xmlns:viewModels="clr-namespace:LunaDraw.Logic.ViewModels"
              xmlns:skiasharp="clr-namespace:SkiaSharp.Views.Maui.Controls;assembly=SkiaSharp.Views.Maui.Controls"
              x:DataType="viewModels:MainViewModel"
              x:Class="LunaDraw.Pages.MainPage">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+  <AbsoluteLayout>
+    <!-- Main Content Grid -->
+    <Grid AbsoluteLayout.LayoutBounds="0,0,1,1"
+          AbsoluteLayout.LayoutFlags="All">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
 
-        <StackLayout Grid.Row="0"
-                Orientation="Horizontal"
-                Spacing="10"
-                Padding="10">
-            <Button Text="Black"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#000000"/>
-            <Button Text="Red"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#FF0000"/>
-            <Button Text="Green"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#00FF00"/>
-            <Button Text="Blue"
-                    Command="{Binding SetColorCommand}"
-                    CommandParameter="#0000FF"/>
-        </StackLayout>
+      <views:ToolbarView Grid.Column="0"
+                         x:Name="toolbarView"/>
 
-        <skiasharp:SKCanvasView Grid.Row="1"
-                                x:Name="canvasView"
-                                PaintSurface="OnCanvasViewPaintSurface"
-                                EnableTouchEvents="True"
-                                Touch="OnTouch"/>
+            <skiasharp:SKCanvasView Grid.Column="1"
+                              x:Name="canvasView"
+                              PaintSurface="OnCanvasViewPaintSurface"
+                              EnableTouchEvents="True"
+                              Touch="OnTouch">
+        <skiasharp:SKCanvasView.GestureRecognizers>
+          <TapGestureRecognizer Tapped="OnCanvasTapped" />
+        </skiasharp:SKCanvasView.GestureRecognizers>
+      </skiasharp:SKCanvasView>
     </Grid>
+
+    <!-- Settings Flyout Panel as True Overlay -->
+    <components:FlyoutPanel x:Name="SettingsFlyoutHost"
+                            IsOpen="{Binding BindingContext.IsSettingsOpen, Source={x:Reference toolbarView}}"
+                            TargetElement="{x:Reference toolbarView}"
+                            AnchorName="SettingsButton">
+      <components:SettingsFlyoutPanel x:Name="SettingsFlyoutContent"
+                                      BindingContext="{Binding Source={x:Reference toolbarView}, Path=BindingContext}"/>
+    </components:FlyoutPanel>
+
+    <!-- Shapes Flyout Panel as True Overlay -->
+    <components:FlyoutPanel x:Name="ShapesFlyoutHost"
+                            IsOpen="{Binding BindingContext.IsShapesFlyoutOpen, Source={x:Reference toolbarView}}"
+                            TargetElement="{x:Reference toolbarView}"
+                            AnchorName="ShapesButton">
+      <components:ShapesFlyoutPanel x:Name="ShapesFlyoutContent"
+                                    BindingContext="{Binding Source={x:Reference toolbarView}, Path=BindingContext}"/>
+    </components:FlyoutPanel>
+  </AbsoluteLayout>
 
 </ContentPage>
