--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -25,7 +25,8 @@
                               x:Name="canvasView"
                               PaintSurface="OnCanvasViewPaintSurface"
                               EnableTouchEvents="True"
-                              Touch="OnTouch">
+                              Touch="OnTouch"
+                              IgnorePixelScaling="False">
         <skiasharp:SKCanvasView.GestureRecognizers>
           <TapGestureRecognizer Tapped="OnCanvasTapped" />
         </skiasharp:SKCanvasView.GestureRecognizers>
@@ -49,6 +50,24 @@
       <components:ShapesFlyoutPanel x:Name="ShapesFlyoutContent"
                                     BindingContext="{Binding Source={x:Reference toolbarView}, Path=BindingContext}"/>
     </components:FlyoutPanel>
-  </AbsoluteLayout>
 
+    <!-- Brushes Flyout Panel as True Overlay -->
+    <components:FlyoutPanel x:Name="BrushesFlyoutHost"
+                            IsOpen="{Binding BindingContext.IsBrushesFlyoutOpen, Source={x:Reference toolbarView}}"
+                            TargetElement="{x:Reference toolbarView}"
+                            AnchorName="BrushButton">
+      <components:BrushesFlyoutPanel x:Name="BrushesFlyoutContent"
+                                     BindingContext="{Binding Source={x:Reference toolbarView}, Path=BindingContext}"/>
+    </components:FlyoutPanel>
+
+    <!-- Mini Map -->
+    <Border AbsoluteLayout.LayoutBounds="1,0, 200, 200"
+            AbsoluteLayout.LayoutFlags="PositionProportional"
+            Margin="20"
+            Stroke="Gray"
+            StrokeThickness="1"
+            BackgroundColor="White">
+            <components:MiniMapView BindingContext="{Binding}" />
+    </Border>
+  </AbsoluteLayout>
 </ContentPage>
