Layer controls. Perf update. Touch refactor w/ smoothing (#19)
* Create dotnet-desktop.yml (#5)

* Update dotnet-desktop.yml

* working layers

* selection fix. g2.5

* flyout panel position bug fix

* arrange context update. syntax fixes. auto-collapse layers panel

* Layer UI controls (#18)

* main view model refactor

* add image feature

* performance enhancements

* syntax updates

* syntax fixes from 2bit AI

* centroid refactor. static refs

* layer control fix

--- a/Components/ToolbarView.xaml
+++ b/Components/ToolbarView.xaml
@@ -81,7 +81,8 @@
                    HorizontalTextAlignment="Center"/>
           </StackLayout>
            <StackLayout HorizontalOptions="Center">
-            <Border WidthRequest="72"
+            <Border x:Name="BrushButton"
+                    WidthRequest="72"
                     HeightRequest="72"
                     Padding="8"
                     Margin="0,4"
@@ -99,7 +100,8 @@
                    HorizontalTextAlignment="Center"/>
           </StackLayout>
           <StackLayout HorizontalOptions="Center">
-            <Border WidthRequest="72"
+            <Border x:Name="ShapesButton"
+                    WidthRequest="72"
                     HeightRequest="72"
                     Padding="8"
                     Margin="0,4"
@@ -118,6 +120,16 @@
             <Label Text="Shapes"
                    HorizontalTextAlignment="Center"/>
           </StackLayout>
+
+          <StackLayout HorizontalOptions="Center">
+            <Button x:Name="ImageButton"
+                    Style="{StaticResource ToolbarButtonStyle}"
+                    Text="🖼️"
+                    Command="{Binding ImportImageCommand}"/>
+            <Label Text="Image"
+                   HorizontalTextAlignment="Center"/>
+          </StackLayout>
+
          <StackLayout HorizontalOptions="Center">
             <Button x:Name="EraserButton"
                     Style="{StaticResource ToolbarButtonStyle}"
